[package]
name = "aoc2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "1.0.1"
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
colored = "2.1.0"
intmap = "2.0.0"
inttable = "0.1.0"
itertools = "0.13.0"
num = "0.4.3"
once_cell = "1.20.2"
proptest = "1.5.0"
radsort = "0.1.1"
rayon = "1.10.0"
regex = "1.11.1"
reqwest = { version = "0.12.8", features = ["blocking"] }
smallvec = "1.13.2"
